[package]
name = "notes"
version = "1.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
dialoguer = "0.12.0"
home = "0.5.12"
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
